--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource/outfit": "^4.5.10",
     "astro": "^1.6.7"
   },
   "devDependencies": {
