--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^1.6.7",
+    "html-to-image": "^1.10.8",
     "qrcode": "^1.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
