--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "html-to-image": "^1.10.8",
     "qrcode": "^1.5.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-hook-form": "^7.39.3"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.42.1",
